perf: Optimize variable types for memory reduction in Quadratic Calculator